--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Web Designer Portfolio</title>
   </head>
 
-  <body>
-    <div id="root"></div>
+  <body id="root">
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
